[package]
name = "update"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
indicatif = "0.17.7"
reqwest = "0.11.22"
slint = "1.3.0"
tempdir = "0.3.7"
tempfile = "3.8.1"
tokio = { version ="1.33.0",features =["full"]} 
zip = "0.6.6"
